# Hack-Game

./: .gitignore  CMakeLists.txt  README-ru.md  README.md  imgui.ini  show-fps.py  show-shaders-time.py  todo-list.md
cppcheck/: check.sh  gcc-macros.h  macros.h
models/: clean.sh  mc.blend  obj2txt.py  player-bullet.blend  player.blend  shooter.blend  sphere.blend
resources/maps/: test.map
resources/models/: clean.sh
resources/shaders/: light.frag  light.vert  main.frag  main.vert  postprocessing.frag  postprocessing.vert
resources/shaders/animation/: animation.vert  common.glsl  enemy-damage.frag  enemy-destroy-billboard.frag  enemy-destroy-circle.frag  enemy-destroy-flat.frag  enemy-destroy-particle.frag  enemy-destroy-square.frag  minion-destroy-billboard.frag  minion-destroy-flat.frag  minion-destroy.frag  particle-cube.frag  player-damage.frag  textured-animation.vert
shaders/: light.frag  light.vert  main.frag  main.geom  main.vert
shaders/animation/: animation.vert  enemy-destroy-circle.frag  enemy-destroy-cube.frag  minion-destroy.frag
src/: aabb.h  block.cpp  block.h  bullet.cpp  bullet.h  camera.cpp  camera.h  debug.cpp  debug.h  dir_paths.h  draw_context.h  enemy.cpp  enemy.h  entity.cpp  entity.h  gl_fwd.h  globals.h  imgui_util.cpp  imgui_util.h  init.cpp  init.h  main.cpp  main.h  model.cpp  model.h  models.cpp  models.h  nowarn_imgui.h  nowarn_imgui_backends.h  player.cpp  player.h  render.cpp  render.h  scancodes.h  shader_loader.cpp  shader_loader.h  shaders.cpp  shaders.h  simple_entity.cpp  simple_entity.h  (+9 more)
src/context/: draw_context.cpp  draw_context.h  shader.cpp  shader.h  tick_context.cpp  tick_context.h
src/entity/: aabb.h  animation_entity.cpp  animation_entity.h  block.cpp  block.h  bullet.cpp  bullet.h  camera.cpp  camera.h  damageable.cpp  damageable.h  enemy.cpp  enemy.h  entity.h  entity_with_pos.h  minion.cpp  minion.h  platform.cpp  platform.h  player.cpp  player.h  simple_entity.cpp  simple_entity.h
src/entity/animation/: animation.cpp  animation.h  billboard_animation.cpp  billboard_animation.h  cube_particle_mode.h  enemy_damage.cpp  enemy_damage.h  enemy_destroy.cpp  enemy_destroy.h  minion_destroy.cpp  minion_destroy.h  player_damage.cpp  player_damage.h
src/gui/: element.h  gui_context.h  menu.cpp  menu.h  menu_bottom_panel.cpp  menu_bottom_panel.h  menu_select.cpp  menu_select.h
src/level/: invalid_level_exception.h  level.cpp  level.h
src/model/: colored_model.cpp  colored_model.h  composite_model.cpp  composite_model.h  frame_model.cpp  frame_model.h  model.cpp  model.h  models.cpp  models.h  postprocessing_model.cpp  postprocessing_model.h  simple_model.cpp  simple_model.h  textured_model.cpp  textured_model.h  vao_model.cpp  vao_model.h
src/shader/: shader.cpp  shader.h  shader_loader.cpp  shader_loader.h  shader_manager.cpp  shader_manager.h
записки разраба/: Анимации Enemy  Анимации Minion  Анимации Player  Анимация конца игры  Анимация урона по Enemy
